Add text to bazlama.html
Description headline and description paragraphs added to Bazlama recipe page

--- a/recipes/bazlama.html
+++ b/recipes/bazlama.html
@@ -7,5 +7,9 @@
     <body>
         <h1>Bazlama</h1>
         <img src="../images/bazlama.jpg" height="320">
+        <p></p>
+        <p></p>
+        <h3>Description</h3>
+        <p>Bazlama is a simple and delicious village bread that I learned to prepare after moving to Turkey.</p><p> Normally it is cooked in an outdoor oven but it works just as well on the stove top. It's best served warm.</p>
     </body>
 </html>
