Add unordered list to bazlama.html
An unordered list of ingredients is added to Bazlama recipe page

--- a/recipes/bazlama.html
+++ b/recipes/bazlama.html
@@ -11,5 +11,14 @@
         <p></p>
         <h3>Description</h3>
         <p>Bazlama is a simple and delicious village bread that I learned to prepare after moving to Turkey.</p><p> Normally it is cooked in an outdoor oven but it works just as well on the stove top. It's best served warm.</p>
+        <h3>Ingredients</h3>
+        <ul style="list-style: circle;">
+            <li>1 (.25 ounce) package active dry yeast</li>
+            <li>1 tablespoon white sugar</li>
+            <li>1 tablespoon salt</li>
+            <li>1 ½ cups warm water (110 degrees F/45 degrees C)</li>
+            <li>½ cup Greek-style yogurt</li>
+            <li>4 cups all-purpose flour</li>
+        </ul>
     </body>
 </html>
