Add image to menemen.html
An image of menemen is added to ./images folder and then in to Menemen recipe page

--- a/recipes/menemen.html
+++ b/recipes/menemen.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>Menemen</h1>
+        <img src="../images/irmik_helvasi.jpg" height="320">
     </body>
 </html>
