Fix wrong image in menemen.html
Wrong image has changed with the right one in Menemen recipe page

--- a/recipes/menemen.html
+++ b/recipes/menemen.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Menemen</h1>
-        <img src="../images/irmik_helvasi.jpg" height="320">
+        <img src="../images/menemen.jpg" height="320">
         <h3>Description</h3>
         <p>This Turkish scrambled egg dish is delicious, full of flavor, and very versatile.</p> 
         <p>You can control the level of spiciness by adding more or less chiles.</p>
