--- a/recipes/irmik_helvasi.html
+++ b/recipes/irmik_helvasi.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>İrmik Helvası</h1>
+        <img src="../images/irmik_helvasi.jpg" height="320">
     </body>
 </html>
