--- a/recipes/irmik_helvasi.html
+++ b/recipes/irmik_helvasi.html
@@ -10,5 +10,13 @@
         <h3>Description</h3>
         <p>Irmik Helvasi (semolina halva) is a traditional Turkish recipe for a classic dessert of halva made from semolina flour.</p> 
         <p>Serve with cinnamon sprinkled on top if desired. This dish can be served warm or cold.</p>
+        <h3>Ingredients</h3>
+        <ul style="list-style: circle;">
+            <li>5 cups water</li>
+            <li>3 cups white sugar</li>
+            <li>2 cups butter</li>
+            <li>2 ½ cups semolina flour</li>
+            <li>½ cup pine nuts</li>
+        </ul>
     </body>
 </html>
