Add ordered list to irmik_helvasi.html
A new ordered list has added to Irmik Helvasi recipe page for 'Directions' section

--- a/recipes/irmik_helvasi.html
+++ b/recipes/irmik_helvasi.html
@@ -18,5 +18,13 @@
             <li>2 ½ cups semolina flour</li>
             <li>½ cup pine nuts</li>
         </ul>
+        <h3>Directions</h3>
+        <ol>
+            <li>Combine water and sugar in a saucepan. Bring syrup to a boil.</li>
+            <p></p>
+            <li>Melt butter in a separate saucepan over medium-low heat, about 5 minutes. Add semolina and pine nuts. Cook, stirring continuously, until golden brown, 20 to 30 minutes.</li>
+            <p></p>
+            <li>Pour syrup carefully over the semolina mixture. Reduce heat to low. Cover and simmer until nicely thickened, about 5 minutes. Let rest for 15 minutes. Divide halva over several small dishes.</li>
+        </ol>
     </body>
 </html>
