--- a/recipes/bazlama.html
+++ b/recipes/bazlama.html
@@ -5,6 +5,7 @@
         <title>Odin Recipes</title>
     </head>
     <body>
+        <a href="../index.html">&lt;- Return to Main Page</a>
         <h1>Bazlama</h1>
         <img src="../images/bazlama.jpg" height="320">
         <p></p>
