--- a/recipes/irmik_helvasi.html
+++ b/recipes/irmik_helvasi.html
@@ -5,6 +5,7 @@
         <title>Odin Recipes</title>
     </head>
     <body>
+        <a href="../index.html">&lt;- Return to Main Page</a>
         <h1>İrmik Helvası</h1>
         <img src="../images/irmik_helvasi.jpg" height="320">
         <h3>Description</h3>
