--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="./recipes/bazlama.html">Bazlama</a>
+        <a href="./recipes/menemen.html">Menemen</a>
+        <a href="./recipes/irmik_helvasi.html">İrmik Helvası</a>
     </body>
 </html>
