--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/bazlama.html">Bazlama</a>
-        <a href="./recipes/menemen.html">Menemen</a>
-        <a href="./recipes/irmik_helvasi.html">İrmik Helvası</a>
+        <ul style="list-style: square;">
+            <li><a href="./recipes/bazlama.html">Bazlama</a></li>
+            <li><a href="./recipes/menemen.html">Menemen</a></li>
+            <li><a href="./recipes/irmik_helvasi.html">İrmik Helvası</a></li>
+        </ul>
     </body>
 </html>
