Add style.css file and add class to index.html
style.css file created for styling. And some classes were added to index.html

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <body>
         <h1>Odin Recipes</h1>
         <ul style="list-style: square;">
-            <li><a href="./recipes/bazlama.html">Bazlama</a></li>
-            <li><a href="./recipes/menemen.html">Menemen</a></li>
-            <li><a href="./recipes/irmik_helvasi.html">İrmik Helvası</a></li>
+            <li><a class="menu" href="./recipes/bazlama.html">Bazlama</a></li>
+            <li><a class="menu" href="./recipes/menemen.html">Menemen</a></li>
+            <li><a class="menu" href="./recipes/irmik_helvasi.html">İrmik Helvası</a></li>
         </ul>
     </body>
 </html>
