--- a/recipes/irmik_helvasi.html
+++ b/recipes/irmik_helvasi.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
         <a href="../index.html">&lt;- Return to Main Page</a>
