Add class selectors to all sub-pages
Now all the sub-pages has class selectors that has distributed

--- a/recipes/bazlama.html
+++ b/recipes/bazlama.html
@@ -7,13 +7,15 @@
     </head>
     <body>
         <a href="../index.html">&lt;- Return to Main Page</a>
-        <h1>Bazlama</h1>
+        <h1 class="headline">Bazlama</h1>
         <img src="../images/bazlama.jpg" height="320">
         <p></p>
         <p></p>
-        <h3>Description</h3>
-        <p>Bazlama is a simple and delicious village bread that I learned to prepare after moving to Turkey.</p><p> Normally it is cooked in an outdoor oven but it works just as well on the stove top. It's best served warm.</p>
-        <h3>Ingredients</h3>
+        <h3 class="subline">Description</h3>
+        <div class="descrp">
+            <p>Bazlama is a simple and delicious village bread that I learned to prepare after moving to Turkey.</p><p> Normally it is cooked in an outdoor oven but it works just as well on the stove top. It's best served warm.</p>
+        </div>
+        <h3 class="subline">Ingredients</h3>
         <ul style="list-style: circle;">
             <li>1 (.25 ounce) package active dry yeast</li>
             <li>1 tablespoon white sugar</li>
@@ -22,8 +24,8 @@
             <li>½ cup Greek-style yogurt</li>
             <li>4 cups all-purpose flour</li>
         </ul>
-        <h3>Directions</h3>
-        <ol>
+        <h3 class="subline">Directions</h3>
+        <ol class="steps">
             <li>Dissolve the yeast, sugar, and salt in the warm water. Add the water and yogurt to the flour and mix well. The dough will be soft but not sticky. Turn the dough out onto a lightly floured surface and shape it into a ball. Cover the dough with a damp cloth and allow it to rise at room temperature for 3 hours.
             </li>
             <p></p>
