--- a/recipes/menemen.html
+++ b/recipes/menemen.html
@@ -7,12 +7,14 @@
     </head>
     <body>
         <a href="../index.html">&lt;- Return to Main Page</a>
-        <h1>Menemen</h1>
+        <h1 class="headline">Menemen</h1>
         <img src="../images/menemen.jpg" height="320">
-        <h3>Description</h3>
-        <p>This Turkish scrambled egg dish is delicious, full of flavor, and very versatile.</p> 
-        <p>You can control the level of spiciness by adding more or less chiles.</p>
-        <h3>Ingredients</h3>
+        <h3 class="subline">Description</h3>
+        <div>
+            <p>This Turkish scrambled egg dish is delicious, full of flavor, and very versatile.</p> 
+            <p>You can control the level of spiciness by adding more or less chiles.</p>
+        </div>
+        <h3 class="subline">Ingredients</h3>
         <ul style="list-style: circle;">
             <li>1 tablespoon extra-virgin olive oil</li>
             <li>¼ cup chopped onion</li>
@@ -26,8 +28,8 @@
             <li>1 tablespoon thinly sliced basil leaves</li>
             <li>1 tablespoon crumbled feta cheese</li>
         </ul>
-        <h3>Directions</h3>
-        <ol>
+        <h3 class="subline">Directions</h3>
+        <ol class="steps">
             <li>Heat olive oil in a skillet over medium heat. Add onion, bell pepper, chiles, and red pepper flakes. Cook and stir until onions are soft and translucent, 5 to 6 minutes. Add garlic and cook until fragrant, about 1 minute. Add tomatoes, with their juices, and season with salt and pepper. Cook until tomatoes are softened, 4 to 6 minutes</li>
             <p></p>
             <li>Add eggs to the skillet, tilting the skillet until eggs cover skillet completely. Do not mix. Cook until eggs are set, 3 to 5 minutes.</li>
