--- a/recipes/irmik_helvasi.html
+++ b/recipes/irmik_helvasi.html
@@ -7,12 +7,14 @@
     </head>
     <body>
         <a href="../index.html">&lt;- Return to Main Page</a>
-        <h1>İrmik Helvası</h1>
+        <h1 class="headline">İrmik Helvası</h1>
         <img src="../images/irmik_helvasi.jpg" height="320">
-        <h3>Description</h3>
-        <p>Irmik Helvasi (semolina halva) is a traditional Turkish recipe for a classic dessert of halva made from semolina flour.</p> 
-        <p>Serve with cinnamon sprinkled on top if desired. This dish can be served warm or cold.</p>
-        <h3>Ingredients</h3>
+        <h3 class="subline">Description</h3>
+        <div>
+            <p>Irmik Helvasi (semolina halva) is a traditional Turkish recipe for a classic dessert of halva made from semolina flour.</p> 
+            <p>Serve with cinnamon sprinkled on top if desired. This dish can be served warm or cold.</p>
+        </div>
+        <h3 class="subline">Ingredients</h3>
         <ul style="list-style: circle;">
             <li>5 cups water</li>
             <li>3 cups white sugar</li>
@@ -20,8 +22,8 @@
             <li>2 ½ cups semolina flour</li>
             <li>½ cup pine nuts</li>
         </ul>
-        <h3>Directions</h3>
-        <ol>
+        <h3 class="subline">Directions</h3>
+        <ol class="steps">
             <li>Combine water and sugar in a saucepan. Bring syrup to a boil.</li>
             <p></p>
             <li>Melt butter in a separate saucepan over medium-low heat, about 5 minutes. Add semolina and pine nuts. Cook, stirring continuously, until golden brown, 20 to 30 minutes.</li>
