Add lines to style.css
Lines for properties of selectors added to style.css and html links were fixed

--- a/recipes/irmik_helvasi.html
+++ b/recipes/irmik_helvasi.html
@@ -10,7 +10,7 @@
         <h1 class="headline">İrmik Helvası</h1>
         <img src="../images/irmik_helvasi.jpg" height="320">
         <h3 class="subline">Description</h3>
-        <div>
+        <div class="descrp">
             <p>Irmik Helvasi (semolina halva) is a traditional Turkish recipe for a classic dessert of halva made from semolina flour.</p> 
             <p>Serve with cinnamon sprinkled on top if desired. This dish can be served warm or cold.</p>
         </div>
