--- a/recipes/menemen.html
+++ b/recipes/menemen.html
@@ -10,7 +10,7 @@
         <h1 class="headline">Menemen</h1>
         <img src="../images/menemen.jpg" height="320">
         <h3 class="subline">Description</h3>
-        <div>
+        <div class="descrp">
             <p>This Turkish scrambled egg dish is delicious, full of flavor, and very versatile.</p> 
             <p>You can control the level of spiciness by adding more or less chiles.</p>
         </div>
