Add class 'headline' into h1 in index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 class="headline">Odin Recipes</h1>
         <ul style="list-style: square;">
             <li><a class="menu" href="./recipes/bazlama.html">Bazlama</a></li>
             <li><a class="menu" href="./recipes/menemen.html">Menemen</a></li>
