Update img style in bazlama.html, irmik helvasi.html, menemen.html

--- a/recipes/irmik_helvasi.html
+++ b/recipes/irmik_helvasi.html
@@ -8,7 +8,7 @@
     <body>
         <a href="../index.html">&lt;- Return to Main Page</a>
         <h1 class="headline">İrmik Helvası</h1>
-        <img src="../images/irmik_helvasi.jpg" height="320">
+        <img src="../images/irmik_helvasi.jpg" style="display: block; margin:40px auto; height: 320px;">
         <h3 class="subline">Description</h3>
         <div class="descrp">
             <p>Irmik Helvasi (semolina halva) is a traditional Turkish recipe for a classic dessert of halva made from semolina flour.</p> 
