--- a/recipes/bazlama.html
+++ b/recipes/bazlama.html
@@ -8,7 +8,7 @@
     <body>
         <a href="../index.html">&lt;- Return to Main Page</a>
         <h1 class="headline">Bazlama</h1>
-        <img src="../images/bazlama.jpg" height="320">
+        <img src="../images/bazlama.jpg" style="display: block; margin:40px auto; height: 320px;">
         <p></p>
         <p></p>
         <h3 class="subline">Description</h3>
