--- a/recipes/menemen.html
+++ b/recipes/menemen.html
@@ -8,7 +8,7 @@
     <body>
         <a href="../index.html">&lt;- Return to Main Page</a>
         <h1 class="headline">Menemen</h1>
-        <img src="../images/menemen.jpg" height="320">
+        <img src="../images/menemen.jpg" style="display: block; margin: 40px auto; height: 320px;">
         <h3 class="subline">Description</h3>
         <div class="descrp">
             <p>This Turkish scrambled egg dish is delicious, full of flavor, and very versatile.</p> 
