Add divs and classes i nstruction ingredients and directions both in recipe pages  and style.css

--- a/recipes/bazlama.html
+++ b/recipes/bazlama.html
@@ -15,8 +15,10 @@
         <div class="descrp">
             <p>Bazlama is a simple and delicious village bread that I learned to prepare after moving to Turkey.</p><p> Normally it is cooked in an outdoor oven but it works just as well on the stove top. It's best served warm.</p>
         </div>
+        <div class="instructions">
+            <div class="ingredients">
         <h3 class="subline">Ingredients</h3>
-        <ul style="list-style: circle;">
+        <ul style="list-style: circle; border: 2px solid black; border-radius: 20px;">
             <li>1 (.25 ounce) package active dry yeast</li>
             <li>1 tablespoon white sugar</li>
             <li>1 tablespoon salt</li>
@@ -24,6 +26,8 @@
             <li>½ cup Greek-style yogurt</li>
             <li>4 cups all-purpose flour</li>
         </ul>
+            </div>
+            <div class="directions">
         <h3 class="subline">Directions</h3>
         <ol class="steps">
             <li>Dissolve the yeast, sugar, and salt in the warm water. Add the water and yogurt to the flour and mix well. The dough will be soft but not sticky. Turn the dough out onto a lightly floured surface and shape it into a ball. Cover the dough with a damp cloth and allow it to rise at room temperature for 3 hours.
@@ -35,5 +39,7 @@
             <p></p>
             <li>Repeat with the remaining dough rounds. Store any leftover flatbreads in an airtight container.</li>
         </ol>
+            </div>
+         </div>
     </body>
 </html>
