--- a/recipes/irmik_helvasi.html
+++ b/recipes/irmik_helvasi.html
@@ -14,14 +14,18 @@
             <p>Irmik Helvasi (semolina halva) is a traditional Turkish recipe for a classic dessert of halva made from semolina flour.</p> 
             <p>Serve with cinnamon sprinkled on top if desired. This dish can be served warm or cold.</p>
         </div>
+        <div class="instructions">
+            <div class="ingredients">
         <h3 class="subline">Ingredients</h3>
-        <ul style="list-style: circle;">
+        <ul style="list-style: circle; border: 2px solid black; border-radius: 20px;">
             <li>5 cups water</li>
             <li>3 cups white sugar</li>
             <li>2 cups butter</li>
             <li>2 ½ cups semolina flour</li>
             <li>½ cup pine nuts</li>
         </ul>
+            </div>
+            <div class="directions">
         <h3 class="subline">Directions</h3>
         <ol class="steps">
             <li>Combine water and sugar in a saucepan. Bring syrup to a boil.</li>
@@ -30,5 +34,7 @@
             <p></p>
             <li>Pour syrup carefully over the semolina mixture. Reduce heat to low. Cover and simmer until nicely thickened, about 5 minutes. Let rest for 15 minutes. Divide halva over several small dishes.</li>
         </ol>
+            </div>
+        </div>
     </body>
 </html>
