--- a/recipes/menemen.html
+++ b/recipes/menemen.html
@@ -14,8 +14,10 @@
             <p>This Turkish scrambled egg dish is delicious, full of flavor, and very versatile.</p> 
             <p>You can control the level of spiciness by adding more or less chiles.</p>
         </div>
+        <div class="instructions">
+            <div class="ingredients">
         <h3 class="subline">Ingredients</h3>
-        <ul style="list-style: circle;">
+        <ul style="list-style: circle; border: 2px solid black; border-radius: 20px;">
             <li>1 tablespoon extra-virgin olive oil</li>
             <li>¼ cup chopped onion</li>
             <li>2 tablespoons diced red bell pepper</li>
@@ -28,6 +30,8 @@
             <li>1 tablespoon thinly sliced basil leaves</li>
             <li>1 tablespoon crumbled feta cheese</li>
         </ul>
+            </div>
+            <div class="directions">
         <h3 class="subline">Directions</h3>
         <ol class="steps">
             <li>Heat olive oil in a skillet over medium heat. Add onion, bell pepper, chiles, and red pepper flakes. Cook and stir until onions are soft and translucent, 5 to 6 minutes. Add garlic and cook until fragrant, about 1 minute. Add tomatoes, with their juices, and season with salt and pepper. Cook until tomatoes are softened, 4 to 6 minutes</li>
@@ -36,5 +40,7 @@
             <p></p>
             <li>Top with basil and feta cheese.</li>
         </ol>
+            </div>
+         </div>
     </body>
 </html>
