--- a/recipes/menemen.html
+++ b/recipes/menemen.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="../style.css">
     </head>
     <body>
-        <a href="../index.html">&lt;- Return to Main Page</a>
+        <a class="return" href="../index.html">&lt;- Return to Main Page</a>
         <h1 class="headline">Menemen</h1>
         <img src="../images/menemen.jpg" style="display: block; margin: 40px auto; height: 320px;">
         <h3 class="subline">Description</h3>
