Update bazlama.html, irmik_helvasi.html and menemen.html changed capitalization of Description

--- a/recipes/bazlama.html
+++ b/recipes/bazlama.html
@@ -11,7 +11,7 @@
         <img src="../images/bazlama.jpg" style="display: block; margin:40px auto; height: 320px;">
         <p></p>
         <p></p>
-        <h3 class="subline">Description</h3>
+        <h3 class="subline">DESCRIPTION</h3>
         <div class="descrp">
             <p>Bazlama is a simple and delicious village bread that I learned to prepare after moving to Turkey.</p><p> Normally it is cooked in an outdoor oven but it works just as well on the stove top. It's best served warm.</p>
         </div>
