--- a/recipes/irmik_helvasi.html
+++ b/recipes/irmik_helvasi.html
@@ -9,7 +9,7 @@
         <a class="return" href="../index.html">&lt;- Return to Main Page</a>
         <h1 class="headline">İrmik Helvası</h1>
         <img src="../images/irmik_helvasi.jpg" style="display: block; margin:40px auto; height: 320px;">
-        <h3 class="subline">Description</h3>
+        <h3 class="subline">DESCRIPTION</h3>
         <div class="descrp">
             <p>Irmik Helvasi (semolina halva) is a traditional Turkish recipe for a classic dessert of halva made from semolina flour.</p> 
             <p>Serve with cinnamon sprinkled on top if desired. This dish can be served warm or cold.</p>
