--- a/recipes/menemen.html
+++ b/recipes/menemen.html
@@ -9,7 +9,7 @@
         <a class="return" href="../index.html">&lt;- Return to Main Page</a>
         <h1 class="headline">Menemen</h1>
         <img src="../images/menemen.jpg" style="display: block; margin: 40px auto; height: 320px;">
-        <h3 class="subline">Description</h3>
+        <h3 class="subline">DESCRIPTION</h3>
         <div class="descrp">
             <p>This Turkish scrambled egg dish is delicious, full of flavor, and very versatile.</p> 
             <p>You can control the level of spiciness by adding more or less chiles.</p>
